<resources>
    <string name="app_name">IDNP_Lab_07</string>
    <string name="txt_codigo">ID</string>
    <string name="txt_nombre">Nombre del tutor</string>
    <string name="txt_fecha">Fecha</string>
    <string name="txt_hora">Hora</string>
    <string name="txt_lugar">Lugar</string>
    <string name="txt_estado">Estado</string>
    <string name="txt_valor">Valoración</string>
    <string name="btn_agregar">Agregar</string>
    <string name="btn_buscar">Buscar</string>
    <string name="btn_modificar">Modificar</string>
    <string name="btn_eliminar">Eliminar</string>
</resources>